--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,20 +11,20 @@
         android:id="@+id/imageView"
         android:layout_width="300dp"
         android:layout_height="125dp"
-        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toTopOf="@+id/tilEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
-        tools:srcCompat="@drawable/ic_logo_minitwitter_white" />
+        app:srcCompat="@drawable/ic_logo_minitwitter_white" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
+        android:textColorHint="@color/colorAzulDark"
         app:layout_constraintBottom_toTopOf="@+id/tilPwd"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.5"
@@ -38,8 +38,7 @@
             android:ems="10"
             android:hint="Email"
             android:inputType="textEmailAddress"
-            android:textColor="@android:color/black"
-            android:textColorHint="@color/colorAzulDark"/>
+            android:textColor="@android:color/white" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -52,7 +51,8 @@
         app:layout_constraintEnd_toEndOf="@+id/tilEmail"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/tilEmail"
-        app:layout_constraintTop_toBottomOf="@+id/tilEmail">
+        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
+        android:textColorHint="@color/colorAzulDark">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtPwd"
@@ -61,8 +61,7 @@
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
-            android:textColor="@android:color/black"
-            android:textColorHint="@color/colorAzulDark" />
+            android:textColor="@android:color/white"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -70,7 +69,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@android:color/white"
+        app:backgroundTint="@android:color/white"
         android:text="INICIAR SESIÓN"
         android:textColor="@color/colorAzul"
         app:layout_constraintBottom_toTopOf="@+id/txtSignUp"
@@ -83,8 +82,8 @@
         android:id="@+id/txtSignUp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="32dp"
         android:gravity="center"
         android:text="Si aún no tienes cuenta, registrate aqui"
         android:textColor="@android:color/white"
