--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -17,7 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
-        tools:srcCompat="@drawable/ic_logo_minitwitter_white" />
+        app:srcCompat="@drawable/ic_logo_minitwitter_white" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilEmail"
@@ -27,7 +27,8 @@
         app:layout_constraintBottom_toTopOf="@+id/tilPwd"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/tilUserName">
+        app:layout_constraintTop_toBottomOf="@+id/tilUserName"
+        android:textColorHint="@color/colorAzulDark">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtEmail"
@@ -36,8 +37,7 @@
             android:ems="10"
             android:hint="Email"
             android:inputType="textEmailAddress"
-            android:textColor="@android:color/white"
-            android:textColorHint="@color/colorAzulDark" />
+            android:textColor="@android:color/white"/>
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -50,7 +50,8 @@
         app:layout_constraintEnd_toEndOf="@+id/tilEmail"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/tilEmail"
-        app:layout_constraintTop_toBottomOf="@+id/tilEmail">
+        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
+        android:textColorHint="@color/colorAzulDark">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtPwd"
@@ -59,8 +60,7 @@
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
-            android:textColor="@android:color/black"
-            android:textColorHint="@color/colorAzulDark" />
+            android:textColor="@android:color/white" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -99,7 +99,8 @@
         app:layout_constraintBottom_toTopOf="@+id/tilEmail"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        android:textColorHint="@color/colorAzulDark">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edtUserName"
@@ -108,8 +109,7 @@
             android:ems="10"
             android:hint="User Name"
             android:inputType="textPersonName"
-            android:textColor="@android:color/white"
-            android:textColorHint="@color/colorAzulDark" />
+            android:textColor="@android:color/white"/>
     </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
