--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#DDDDDD</color>
     <color name="colorAccent">#0B467E</color>
-    <color name="colorAzul">#03A9F4</color>
-    <color name="colorAzulDark">#0B467E</color>
+    <color name="colorAzul">#00ACED</color>
+    <color name="colorAzulDark">#0186BD</color>
 </resources>
