--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,7 @@
             android:layout_height="match_parent"
             android:ems="10"
             android:hint="Email"
+            android:text="info@minitwitter.com"
             android:inputType="textEmailAddress"
             android:textColor="@android:color/white" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -61,6 +62,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="Password"
+            android:text="1234"
             android:inputType="textPassword"
             android:textColor="@android:color/white" />
     </com.google.android.material.textfield.TextInputLayout>
