created view to show list of tweets

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#0B467E</color>
     <color name="colorAzul">#00ACED</color>
     <color name="colorAzulDark">#0186BD</color>
+    <color name="pink">#e0245e</color>
 </resources>
