--- a/app/src/main/res/layout/fragment_tweet.xml
+++ b/app/src/main/res/layout/fragment_tweet.xml
@@ -13,7 +13,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/ic_logo_minituiter_mini"
+        android:src="@drawable/logo_minitwitter_mini"
         android:paddingStart="8dp"
         android:paddingRight="8dp"
         android:paddingLeft="8dp"
