--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,6 @@
         android:layout_height="125dp"
         app:layout_constraintBottom_toTopOf="@+id/tilEmail"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
@@ -28,7 +27,6 @@
         android:textColorHint="@color/colorAzulDark"
         app:layout_constraintBottom_toTopOf="@+id/tilPwd"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/imageView">
 
@@ -38,7 +36,7 @@
             android:layout_height="match_parent"
             android:ems="10"
             android:hint="Email"
-            android:text="info@minitwitter.com"
+            android:text="yiyiyoyo@minitwitter.com"
             android:inputType="textEmailAddress"
             android:textColor="@android:color/white" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -52,7 +50,6 @@
         android:textColorHint="@color/colorAzulDark"
         app:layout_constraintBottom_toTopOf="@+id/btnLogin"
         app:layout_constraintEnd_toEndOf="@+id/tilEmail"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/tilEmail"
         app:layout_constraintTop_toBottomOf="@+id/tilEmail">
 
@@ -77,7 +74,6 @@
         app:backgroundTint="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/txtSignUp"
         app:layout_constraintEnd_toEndOf="@+id/tilPwd"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/tilPwd"
         app:layout_constraintTop_toBottomOf="@+id/tilPwd" />
 
@@ -92,7 +88,6 @@
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btnLogin"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/btnLogin"
         app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
 </androidx.constraintlayout.widget.ConstraintLayout>
