--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
             android:layout_height="match_parent"
             android:ems="10"
             android:hint="Email"
-            android:text="info@minitwitter.com"
+            android:text="m@m.com"
             android:inputType="textEmailAddress"
             android:textColor="@android:color/white" />
     </com.google.android.material.textfield.TextInputLayout>
